# JackpotMaximizer

./: .gitignore  DataFrame.json  Insight.py  Jack_test.py  LuckEight.py  News.ipynb  NoSleep.sh  Orz_Loadtojpg.py  Orz_Lotto.py  Perform_exploration.py  README.md  String.json  Test.py  asd.md  bets.json  bitx.json  buffer  calculus.py  division_image.py  filterN_v3.json  findsame.py  funcs_v2.py  insx.reg  insx.rego  jpm.command  jpm_insight.py  logs  minde.drawio  multip_v3_test.py  my_database.db  nohup.out  out.xlsx  pyproject.toml  qlck.command  qls.command  rbdata.json  save.md  sqloperd  telegram.py  temp.text  (+7 more)
.github/workflows/: python-app.yml
Fonts/: bg2.afphoto
backup/: Bayesian.py  Jack_test.py  download.py  funcs.py  jpm_insight.py  multip_v2.py  multip_v3.py  rego_v2.py
codex/: BigLottery52.py  BigLottery52_old.py  Tonji.py  __init__.py  asyncsq3.py  command.py  diffwhere.py  download.py  filters_v3.py  filters_v4.py  funcs.py  funcs_v2.py  gethtml_v2.py  glns_v2.py  groove.py  loadjson.py  multip.py  multip_v2.py  multip_v3.py  multip_v4.py  note.py  ospath.py  rego.py  rego_v2.py  rego_v3.py  rego_v4.py  runingtime.py  sq3database.py  tonji.py
shell/: improt.sh
